added highlighter, need to configure theme

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,10 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Restsplain Docs</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="restsplain"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
