--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,28 +4,50 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Restsplain Docs</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font: 100%/1.4 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      }
+      a {
+        color: #4c81c9;
+      }
+      table {
+        marign: 0;
+        padding: 0;
+        border: 1px solid rgba(0,0,0,.15);
+        border-collapse: collapse;
+        width: 100%;
+      }
+      thead {
+        background: rgba(0,0,0,.1);
+      }
+      th, th:first-child {
+        text-align: left;
+        padding: 10px;
+        border-bottom: 1px solid #ccc;
+      }
+      td, td:first-child {
+        padding: 10px;
+      }
+      tbody tr:nth-child(2n) {
+        background: rgba(0,0,0,.05);
+      }
+      pre {
+        font: .8rem/1.4 Monaco, "Anonymous Pro", Consolas, monospace;
+      }
+      code {
+        font-family: Monaco, "Anonymous Pro", Consolas, monospace;
+      }
+      .json-inspector,
+      .json-inspector__selection {
+        font: .8rem/1.4 Monaco, "Anonymous Pro", Consolas, monospace;
+      }
+    </style>
   </head>
   <body>
     <div id="restsplain"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
-    -->
   </body>
 </html>
