add basic auth array handling, will need further improvements

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -29,8 +29,8 @@
         padding: 10px;
         border-bottom: 1px solid #ccc;
       }
-      td, td:first-child {
-        padding: 10px;
+      td {
+        padding: 20px 10px;
       }
       tbody tr:nth-child(2n) {
         background: rgba(0,0,0,.05);
