better default styles

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,6 +14,15 @@
       a {
         color: #4c81c9;
       }
+      h1 {
+        font-size: 2rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+      h3 {
+        font-size: 1.2rem;
+      }
       table {
         marign: 0;
         padding: 0;
